--- a/frontend/sign-up/sign-up.html
+++ b/frontend/sign-up/sign-up.html
@@ -44,7 +44,7 @@
                 userPassword: password
             };
 
-            axios.post('http://localhost:3000/api/v1/auth/register', request, {
+            axios.post('http://130.10.3.10:3000/api/v1/auth/register', request, {
                 headers: {
                     'Content-Type': 'application/json'
                 }
